# AB-PRJ1

./: .gitignore  requirements.txt
api/: Dockerfile  build.sh  db.sqlite3  nixpacks.toml  pyproject.toml  requirements.txt
api/api/: settings.py  urls.py
api/core/: admin.py  models.py  serializers.py  urls.py  views.py
api/core/migrations/: 0001_initial.py  0002_article_author.py
api/employers/: admin.py  models.py  serializers.py  urls.py  views.py
api/employers/migrations/: 0001_initial.py
api/seekers/: admin.py  models.py  serializers.py  urls.py  views.py
api/seekers/migrations/: 0001_initial.py
api/users/: adapter.py  admin.py  models.py  serializers.py  urls.py  views.py
api/users/migrations/: 0001_initial.py
