[tool.poetry]
name = "prj1"
version = "0.1.0"
description = ""
authors = ["captjay98wsl <captjay98@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.5"
django = "^4.1.7"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.14.0"
django-environ = "^0.10.0"
django-countries = {extras = ["pyuca"], version = "^7.5.1"}
django-storages = "^1.13.2"
django-jazzmin = "^2.6.0"
# django-extensions = "^3.2.1"
# pygraphviz = "^1.10"
pillow = "^9.4.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
