[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["captjay98wsl <captjay98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2"
django-cors-headers = "^3.14.0"
django-countries = "^7.5.1"
django-environ = "^0.10.0"
django-extensions = "^3.2.1"
django-jazzmin = "^2.6.0"
django-storages = "^1.13.2"
djangorestframework = "^3.14.0"
gunicorn = "^20.1.0"
mysqlclient = "^2.1.1"
pillow = "^9.5.0"
psycopg2-binary = "^2.9.6"
pytz = "^2023.3"
sqlparse = "^0.4.3"
typing-extensions = "^4.5.0"
whitenoise = "^6.4.0"
dj-rest-auth = "^3.0.0"
django-allauth = "^0.54.0"
djangorestframework-simplejwt = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
